# anomalearn

./: .gitignore  .pylintrc  CITATION.bib  README.md  create_doc.py  doc_creator.py  doc_fix_dev_api.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: docs.yml
UML/: UML.drawio
anomalearn/: __init__.py  abc.py
anomalearn/algorithms/: BaseModel.py  IBoundaryClassifier.py  IClassifier.py  ICluster.py  ICopyable.py  IMultipleParametric.py  IParametric.py  IPredictor.py  IProbabilisticClassifier.py  IRegressor.py  ISavable.py  IShapeChanger.py  ITransformer.py  SavableModel.py  __init__.py  algo_functions.py
anomalearn/algorithms/models/: IAnomalyClassifier.py  IAnomalyScorer.py  __init__.py
anomalearn/algorithms/pipelines/: AbstractPipelineBaseLayer.py  AbstractPipelineSavableLayer.py  IPipeline.py  IPipelineLayer.py  Pipeline.py  __init__.py
anomalearn/algorithms/postprocessing/: BuilderErrorVectorsAbsDifference.py  BuilderErrorVectorsDifference.py  BuilderErrorVectorsNorm.py  BuilderVectorsSlidingWindow.py  ScorerGaussian.py  ScorerMahalanobis.py  ThresholdMaxOnNormal.py  __init__.py
anomalearn/algorithms/preprocessing/: SlidingWindowForecast.py  SlidingWindowReconstruct.py  __init__.py
anomalearn/algorithms/transformers/: MinMaxScaler.py  StandardScaler.py  __init__.py
anomalearn/algorithms/tuning/: ICrossValidation.py  __init__.py
anomalearn/analysis/: __init__.py  dataset_simplicity.py  decomposition.py  stationarity.py
anomalearn/applications/: ExperimentLoader.py  IExperimentLoader.py  Munir2018.py  Zangrando2022.py  __init__.py
anomalearn/exceptions/: ClosedOpenRangeError.py  ClosedRangeError.py  InvalidInputShape.py  NotTrainedError.py  OpenClosedRangeError.py  OpenRangeError.py  RangeError.py  SelectionError.py  __init__.py
anomalearn/input_validation/: __init__.py  array_checks.py  attribute_checks.py  colors.py
anomalearn/reader/: IDataMultipleReader.py  IDataReader.py  IDatasetReader.py  MissingStrategy.py  __init__.py
anomalearn/reader/time_series/: ExathlonReader.py  GHLReader.py  KitsuneReader.py  MGABReader.py  NABReader.py  NASAReader.py  ODINTSReader.py  SMDReader.py  TSBenchmarkReader.py  TSMultipleReader.py  TSReader.py  UCRReader.py  YahooS5Reader.py  __init__.py  config.py  time_series_config.ini
anomalearn/utils/: __init__.py  arrays.py  estimation.py  filesystem.py  json.py  lists.py  metrics.py  moving_functions.py  numpy.py  printing.py  scikit.py
anomalearn/visualizer/: __init__.py  bar_plots.py  box_plots.py  line_plots.py  pie_plots.py  scatter_plots.py
anomalearn/visualizer/time_series/: __init__.py  correlation.py  decomposition.py
docs/inventories/: numba.inv  numba.txt
docs/source/: conf.py  index.rst
docs/source/developer/: introduction.rst
docs/source/getting_started/: advanced_install.rst  first_steps.rst  package_overview.rst
docs/source/reference/: api_reference.rst
docs/source/release/: summary.rst  v0.0.1.rst  v0.0.2.rst
docs/source/user/: introduction.rst
testing/: MGABReader.py  MultipleReader.py  NABReader.py  NASAReader.py  NaiveConstAvgStdTest.py  NaiveConstantTest.py  NaiveMovAvgStdTest.py  UCRReader.py
testing/analysis/: numba_dataset_simplicity.py  numba_moving_functions.py  test_dataset_simplicity.py
testing/numba/: numba_dataset_simplicity.py
testing/reader/time_series/: ExathlonReader.py  GHLReader.py  KitsuneReader.py  MGABReader.py  MultipleReader.py  NABReader.py  NASAReader.py  SMDReader.py  UCRReader.py  YahooS5Reader.py
tests/: __init__.py
tests/anomalearn/: TestAbc.py  __init__.py
tests/anomalearn/algorithms/: TestAlgoFunctions.py
tests/anomalearn/analysis/: TestDatasetSimplicityFunctions.py  TestDecompositionFunctions.py  (+5 more)
(+374 files in other folders)
